Fix Bug Overflow-2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,7 @@ img {
     padding: 0;
     text-align: center;
     box-sizing: border-box;
+    overflow-x: hidden;
 
   }
 
